--- a/index.html
+++ b/index.html
@@ -4,6 +4,12 @@
     <title>Sample App</title>
     <link href="/node_modules/patternfly/dist/css/patternfly.min.css" rel="stylesheet" media="screen, print">
     <link href="/node_modules/patternfly/dist/css/patternfly-additions.min.css" rel="stylesheet" media="screen, print">
+    <!-- jQuery -->
+          <script src="/node_modules/jquery/dist/jquery.min.js"></script>
+          <!-- Bootstrap -->
+          <script src="/node_modules/bootstrap/dist/js/bootstrap.min.js"></script>
+          <!-- PatternFly -->
+          <script src="/node_modules/patternfly/dist/js/patternfly.min.js"></script>
   </head>
   <body>
       <div id='root'>
